# NJU_CPL_Grade1_Almira

./: CMakeLists.txt  README.md  main.c
cpl-10/: task2.c  task3.1.c  task3.c
cpl-2/: CMakeLists.txt  main.c  task1.c  task2.2.c  task2.c  task3.c  task4.c  task5.c  task6.c
cpl-3/: CMakeLists.txt  main.c  notes.c  practise1.c  practise2.c  practise3.c  practise4.c  practise5.c  practise6.c  practise7.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.2.c  task6.c  work1.c  work2.c  work3.c  work4.c  work5.c
cpl-4/: CMakeLists.txt  main.c  notes.c  practise2.c  practise5.c  task1.c  task2.c  task4.2.c  task4.c  task5.c  work1.game of life.c  work2.merge.c  work3.insert.c
cpl-4/practise/: practise1.c  practise3.c  practise4.c  practise6.c
cpl-4/tasks/: task3.c  task6.c  task7.c  task8.c  task8.chatgpt.c
cpl-6/: CMakeLists.txt  task1.c  task2 AI.c  task2.c  task4.c  task5.c  task6.c
cpl-7/: CMakeLists.txt  practise1.c  practise2.c  task1.2.c  task1.c  task2.2.c  task2.c  task3.c  task4.c  task5.2.c  task5.3.c  task5.c  task6.c
cpl-8/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c
cpl-8/cpl-8-2/: CMakeLists.txt  task-21.1.c  task-21.c  task-22.c  task-23.c  task-24.1.c  task-24.c
cpl-9/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c
cpl-home/: CMakeLists.txt  huanshu.c  test2task2.c  try.c  try3.c
exam-2/: CMakeLists.txt  task2.c  task3.c  ultimate.c
fxy-c-homework/: 11_A.c  11_B.c  11_C.c  11_D.c  11_E.c  CMakeLists.txt
model test1/: CMakeLists.txt  model1.c  model2.2.c  model2.c  model3.c
model tset2/: CMakeLists.txt  model1.c  model2.c
