cmake_minimum_required(VERSION 3.29)
project(C)

set(CMAKE_C_STANDARD 17)

add_executable(main
        main.c)
add_executable(work3 cpl-4/practise/practise3.c)
add_executable(practise4 cpl-4/practise/practise4.c)
add_executable(practise5 cpl-4/practise5.c)
add_executable(practise6 cpl-4/practise/practise6.c)
add_executable(try3 cpl-home/try3.c)
add_executable(task1 model test1/task1.c)
add_executable(task111 model test1/task1.c)
add_executable(model1 model test1/model1.c)
