cmake_minimum_required(VERSION 3.29)
project(cpl_3 C)

set(CMAKE_C_STANDARD 17)

add_executable(cpl_3 main.c)
add_executable(work1 work1.c)
add_executable(notes notes.c)
add_executable(work2 work2.c)
add_executable(work3 work3.c)
add_executable(work4 work4.c)
add_executable(work5 work5.c)
add_executable(practise1 practise1.c)
add_executable(practise2 practise2.c)
add_executable(practise3 practise3.c)
add_executable(practise4 practise4.c)
add_executable(practise5 practise5.c)
add_executable(practise6 practise6.c)
add_executable(practise7 practise7.c)
add_executable(task1 task1.c)
add_executable(task2 task2.c)
add_executable(task3 task3.c)
add_executable(task4 task4.c)
add_executable(task5 task5.c)
add_executable(task6 task6.c)
add_executable(task6.2 task6.2.c)
