cmake_minimum_required(VERSION 3.29)
project(cpl_4 C)

set(CMAKE_C_STANDARD 17)

add_executable(cpl_4 main.c)
add_executable(works "work1.game of life.c")
add_executable(notes notes.c)
add_executable(work2.merge work2.merge.c)
add_executable(work3.insert work3.insert.c)
add_executable(practise1 practise1.c)
add_executable(practise2 practise2.c)
add_executable(task1 task1.c)
add_executable(task2 task2.c)
add_executable(task3 task3.c)
add_executable(task4 task4.c)
add_executable(task4.2 task4.2.c)
add_executable(task5 task5.c)
add_executable(task6 task6.c)
add_executable(task7 task7.c)
add_executable(task8 task8.c)
add_executable(task8.chatgpt task8.chatgpt.c)
