cmake_minimum_required(VERSION 3.29)
project(cpl_4 C)

set(CMAKE_C_STANDARD 17)

add_executable(cpl_4 main.c)
add_executable(works "work/work1.game of life.c")
add_executable(notes work/notes.c)
add_executable(work2.merge work/work2.merge.c)
add_executable(practise1 practise/practise1.c)
add_executable(practise2 practise/practise2.c)
add_executable(practise3 practise/practise3.c)
add_executable(task1 tasks/task1.c)
add_executable(task2 tasks/task2.c)
add_executable(task3 tasks/task3.c)
add_executable(task4 tasks/task4.c)
add_executable(task4.2 tasks/task4.2.c)
add_executable(task5 tasks/task5.c)
add_executable(task6 tasks/task6.c)
add_executable(task7 tasks/task7.c)
add_executable(task8 tasks/task8.c)
add_executable(task8.chatgpt tasks/task8.chatgpt.c)
