cmake_minimum_required(VERSION 3.29)
project(C)

set(CMAKE_C_STANDARD 17)

add_executable(practise practise1.c)
add_executable(practise1.2 practise1.2.c)
add_executable(practise2 practise2.c)
add_executable(task1 task1.c)
add_executable(task2 task2.c)
add_executable(task3 task3.c)
add_executable(task4 task4.c)
add_executable(task5 task5.c)
add_executable(task5.2 task5.2.c)
add_executable(task6 task6.c)
add_executable(task1.2 task1.2.c)
add_executable(task2.2 task2.2.c)
add_executable(task5.3 task5.3.c)
